force-app/main/default/objects/Loan_Product__c/Loan_Product__c.object-meta.xml
<CustomObject>
    <description>Catalog of available loan products, with eligibility and limit details.</description>
    <label>Loan Product</label>
    <nameField>
        <label>Loan Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>