force-app/main/default/objects/Loan_Product__c/fields/Maximum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Amount__c</fullName>
    <description>Maximum loan amount allowed for this product.</description>
    <label>Maximum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>