force-app/main/default/objects/Loan_Product__c/fields/Maximum_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Tenure_Months__c</fullName>
    <description>Maximum loan tenure(in months).</description>
    <label>Maximum Tenure(Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>