force-app/main/default/objects/Loan_Product__c/fields/Minimum_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Credit_Score__c</fullName>
    <description>Minimum required credit score for eligibility.</description>
    <label>Minimum Credit Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>